--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
+    <script src="patterns/dotPattern.js"></script>
+    <script src="patterns/xPattern.js"></script>
+    <!-- Load sketch file last, needs pattern files loaded first -->
     <script src="sketch.js"></script>
+    </script>
     <title>Grandma's Quilt 👵</title>
   </head>
   <body>
